Fix: chat not taking full-screen on mobile

--- a/LuminaryVisuals/wwwroot/app.css
+++ b/LuminaryVisuals/wwwroot/app.css
@@ -207,7 +207,7 @@ th.mud-table-cell.sticky-left:hover {
 
    
     .chat-container {
-        width: 100dvh !important;
+        width: 100dvw !important;
         height: 100dvh !important;
     }
 }
